Use official GitHub Pages deploy

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,11 +6,20 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write # This allows pushing to gh-pages
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   deploy_docs:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,5 +29,14 @@ jobs:
           enable-cache: true
       - name: Install dependencies
         run: make sync
-      - name: Deploy docs
-        run: make deploy-docs
+      - name: Build docs
+        run: mkdocs build --strict --site-dir site
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
