--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dev = [
   "mkdocs-material>=9.6.14",
   "mkdocstrings[python]>=0.29.1",
   "mkdocs-static-i18n>=1.3.0",
+  "pymdown-extensions>=10.0.0",
   "coverage>=7.8.0",
   "hypothesis>=6.131.20",
 ]
