--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,8 @@ isort = { combine-as-imports = true, known-first-party = ["guardrails"] }
 convention = "google"
 
 [tool.ruff.lint.extend-per-file-ignores]
-"tests/**" = ["E501"]
+"tests/**" = ["E501", "D100", "D103", "D104"]
+"examples/**" = ["D100", "D103", "D104"]
 
 [tool.ruff.format]
 docstring-code-format = true
